...
      modifier =
          Modifier.requiredSize(size * widthRatio, size * heightRatio)
              .offset(x = xOffset, y = yOffset)
              .graphicsLayer(rotationZ = rotation)
              .background(color)
              .zIndex(1f)
              .testTag("AnimationBox"))
}

